feat: added api test & fixed up routes in weather
