# src/server/cmd/api/api.go
@@ -59,6 +59,8 @@ func (app *application) mount() http.Handler {
 	}
 
 	r.Route("/v1", func(r chi.Router) {
+		r.Get("/health", app.healthCheckHandler)
+
 		docsURL := fmt.Sprintf("%s/swagger/doc.json", app.config.Addr)
 		r.Get("/swagger/*", httpSwagger.Handler(httpSwagger.URL(docsURL)))
 
