# src/server/docs/swagger.yaml
@@ -237,6 +237,19 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Weather API
 paths:
+  /health:
+    get:
+      description: Healthcheck endpoint
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: Healthcheck
+      tags:
+      - ops
   /users/login:
     post:
       consumes:
